# flet_0_86_dev2

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/: main.py
