[project]
name = "flet-0-86-dev2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.86.0.dev2",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
]

[dependency-groups]
dev = [
    "flet-cli>=0.86.0.dev2",
    "flet-desktop>=0.86.0.dev2",
    "flet-web>=0.86.0.dev2",
    # Integration testing with `flet test` / pytest. The `test` extra brings in
    # pytest, pytest-asyncio and the screenshot-comparison dependencies.
    "flet[test]>=0.86.0.dev2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.flet.android]
target_arch = ["arm64-v8a"]
extract_packages=[]

[tool.flet]
org = "com.mycompany"
product = "flet-0-86-dev2"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
